@@ -1,5 +1,5 @@
 Package: glmmADMB
-Version: 0.7.2.12
+Version: 0.7.3
 Revision: $Revision$
 Date: $Date$
 Title: Generalized Linear Mixed Models using AD Model Builder
